# ai_driven_dev_v2

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.md  Makefile  README.md  SECURITY.md  SUPPORT.md  aidd.example.toml  manifest.txt  pyproject.toml
.agents/skills/: AGENTS.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  operator_support.yml
.github/workflows/: ci.yml  manual-live-e2e.yml  release.yml  security.yml
browser_tests/: __init__.py  browser_evidence.py  browser_harness.py  journey_support.py  rendered_assertions.py  rendered_geometry.py  state_fixtures.py  test_active_studio_shell.py  test_browser_evidence.py  test_browser_harness.py  test_composite_controls.py  test_control_anatomy.py  test_control_states.py  test_density_modes.py  test_document_canvas.py  test_evidence_inspector.py  test_flow_complete_mobile.py  test_focus_navigation.py  test_guided_step.py  test_history_filmstrip.py  test_history_journey.py  test_human_decision_mobile.py  test_inbox_item.py  test_journey_active_studio.py  test_journey_approval_recovery.py  test_journey_document_evidence.py  test_journey_guided_setup.py  test_journey_implementation.py  test_journey_inbox.py  test_journey_intervention_recovery.py  test_journey_question_recovery.py  test_journey_review_qa.py  test_journey_runtime_validation_recovery.py  test_mobile_primary_decision.py  test_mobile_stage_navigation.py  test_mobile_studio_header.py  test_next_flow_session_drafts.py  test_packaged_ui_smoke.py  test_presentation_selector.py  test_quality_gate_parity.py  (+16 more)
contracts/: AGENTS.md
contracts/documents/: AGENTS.md  answers.md  idea-brief.md  implementation-report.md  operator-request.md  plan.md  qa-report.md  questions.md  repair-brief.md  research-notes.md  review-report.md  review-spec-report.md  stage-brief.md  stage-result.md  tasklist.md  validator-report.md
contracts/examples/: AGENTS.md
contracts/stages/: AGENTS.md  idea.md  implement.md  plan.md  qa.md  research.md  review-spec.md  review.md  tasklist.md
docs/: AGENTS.md  compatibility-policy.md  operator-handbook.md  operator-support-policy.md  operator-troubleshooting.md  release-checklist.md  release-notes-v0.1.0a10-draft.md  release-notes-v0.1.0a11-draft.md  release-notes-v0.1.0a12-draft.md  release-notes-v0.1.0a13-draft.md  release-notes-v0.1.0a14-draft.md  release-notes-v0.1.0a15-draft.md  release-notes-v0.1.0a3-draft.md  release-notes-v0.1.0a4-draft.md  release-notes-v0.1.0a4.md  release-notes-v0.1.0a5-draft.md  release-notes-v0.1.0a6-draft.md  release-notes-v0.1.0a7-draft.md  release-notes-v0.1.0a8-draft.md  release-notes-v0.1.0a9-draft.md
docs/analysis/: AGENTS.md  analytical-note.md  (+5 more)
harness/: AGENTS.md
prompt-packs/: AGENTS.md
scripts/: check_packaged_javascript.py  release_live_proof_runtime.py  run_ci_scenarios.py  run_packaged_ui_scenarios.py
tests/: AGENTS.md  planning_integrity.py  test_cli_run_lookup.py  test_cli_smoke.py  test_config.py  test_contract_registry.py  test_docs_consistency.py  test_live_acceptance_architecture.py  test_package_version.py  test_packaged_ui_scenarios.py  test_packaging_resources.py  test_planning_integrity.py  test_prompt_quality.py  test_release_helpers.py  test_release_workflow.py  test_reporting.py  test_repository_hygiene.py  test_runtime_permissions.py  test_scenario_loader.py  test_scenario_taxonomy.py  test_security_configuration.py
(+688 files in other folders)
