[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ai-driven-dev-v2"
version = "0.1.0a16.dev0"
description = "Runtime-agnostic, document-first orchestration for AI-driven software delivery."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "GrinRus" }
]
keywords = [
  "ai",
  "cli",
  "developer-tools",
  "evaluation",
  "orchestration",
  "runtime-adapters",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "playwright>=1.60.0",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "mypy>=1.11.2",
]

[project.scripts]
aidd = "aidd.cli.main:app"

[project.urls]
Homepage = "https://github.com/GrinRus/ai_driven_dev_v2"
Repository = "https://github.com/GrinRus/ai_driven_dev_v2"
Issues = "https://github.com/GrinRus/ai_driven_dev_v2/issues"
Documentation = "https://github.com/GrinRus/ai_driven_dev_v2/tree/main/docs"
Changelog = "https://github.com/GrinRus/ai_driven_dev_v2/blob/main/CHANGELOG.md"
Security = "https://github.com/GrinRus/ai_driven_dev_v2/blob/main/SECURITY.md"

[tool.hatch.build.targets.wheel]
packages = ["src/aidd"]

[tool.hatch.build.targets.wheel.force-include]
"contracts" = "aidd/_resources/contracts"
"prompt-packs" = "aidd/_resources/prompt-packs"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["src", "scripts"]
strict = true
